argocd/app-foo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udabackend-foo
  namespace: foo
spec:
  ports:
  - port: 3030
    targetPort: 3030
  selector:
    app: udabackend-foo
